2010-06-04  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44412
	* typeck.c (build_class_member_access_expr): Call mark_exp_read
	on object for static data members.

2010-06-04  Jakub Jelinek  <jakub@redhat.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/44362
	* call.c (build_conditional_expr): If both arg2 and arg3 are lvalues
	with the same type, call mark_lvalue_use on both.

2010-06-02  Jakub Jelinek  <jakub@redhat.com>

	* cp-objcp-common.c (shadowed_var_for_decl): Change into
	tree_decl_map hashtab from tree_map.
	(decl_shadowed_for_var_lookup, decl_shadowed_for_var_insert): Adjust.
	(init_shadowed_var_for_decl): Adjust initialization.

	PR c++/44361
	* cvt.c (convert_to_void): If implicit is NULL, call mark_rvalue_use
	instead of calling mark_exp_read only when not an assignment.

	PR debug/44367
	* semantics.c (finalize_nrv): Don't copy DECL_ARTIFICIAL, DECL_IGNORED_P,
	DECL_SOURCE_LOCATION and DECL_ABSTRACT_ORIGIN from var to result.
	Set DECL_VALUE_EXPR on var.

2010-05-27  Jason Merrill  <jason@redhat.com>

	PR c++/43555
	* decl.c (grokdeclarator) [cdk_pointer et al]: Force evaluation of
	anonymous VLA size.

2010-05-19  Jason Merrill  <jason@redhat.com>

	PR c++/44193
	* pt.c (tsubst) [TYPENAME_TYPE]: Discard cv-quals on
	function/reference type.

2010-05-18  Jakub Jelinek  <jakub@redhat.com>

	* decl.c (poplevel): Never emit -Wunused-but-set-variable warnings
	for DECL_INTEGRAL_CONSTANT_VAR_P decls.

2010-05-17  Dodji Seketeli  <dodji@redhat.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/44108
	* decl.c (compute_array_index_type): Call mark_rvalue_use.

2010-05-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44148
	* pt.c (tsubst): Unshare template argument.

2010-05-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44062
	* semantics.c (finish_expr_stmt): Don't call mark_exp_read here...
	* cvt.c (convert_to_void): ... but here.  If expr is a COMPOUND_EXPR,
	look at its second operand.

2010-04-22  Jakub Jelinek <jakub@redhat.com>