@@ -805,7 +805,9 @@ convert_to_void (tree expr, const char *implicit, tsubst_flags_t complain)
 
       while (TREE_CODE (exprv) == COMPOUND_EXPR)
 	exprv = TREE_OPERAND (exprv, 1);
-      if (DECL_P (exprv) || handled_component_p (exprv))
+      if (DECL_P (exprv)
+	  || handled_component_p (exprv)
+	  || TREE_CODE (exprv) == INDIRECT_REF)
 	/* Expr is not being 'used' here, otherwise we whould have
 	   called mark_{rl}value_use use here, which would have in turn
 	   called mark_exp_read.  Rather, we call mark_exp_read directly
